# rustytime

./: .dockerignore  .env.example  .gitignore  .markdownlint.jsonc  Dockerfile  README.md  docker-compose.yml  seed_db.sh  upload.sh
.github/: dependabot.yml
.github/workflows/: cd-arm.yml  cd.yml  ci.yml
frontend/: .env.example  .gitignore  README.md  _redirects  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  vite.config.ts  wrangler.jsonc
frontend/src/: app.css  app.d.ts  app.html  hooks.server.ts  icons.d.ts
frontend/src/lib/: index.ts
frontend/src/lib/api/: admin.ts  api.ts  import.ts  project.ts  settings.ts
frontend/src/lib/charts/: BarChart.svelte  DateBarChart.svelte  PieChart.svelte  apexClient.ts  echarts.ts
frontend/src/lib/components/: AuthErrorWarning.svelte  ErrorPage.svelte  Footer.svelte  Logo.svelte  Meta.svelte  Modal.svelte  SideBar.svelte  UserTag.svelte
frontend/src/lib/server/: data.ts
frontend/src/lib/services/: auth.ts
frontend/src/lib/stores/: apexcharts.ts  auth.ts  theme.ts
frontend/src/lib/types/: admin.ts  dashboard.ts  imports.ts  index.ts  leaderboard.ts  profile.ts  projects.ts  settings.ts
frontend/src/lib/utils/: admin.ts  apexClient.ts  api.ts  authEffect.ts  chart.ts  charts.ts  dataLoader.ts  deferred-data.svelte.ts  refresh.ts  serverApi.ts  site.ts  text.ts  time.ts
frontend/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
frontend/src/routes/@[slug]/: +page.server.ts  +page.svelte  ProfileSkeleton.svelte
frontend/src/routes/admin/: +error.svelte  +page.server.ts  +page.svelte  +page.ts
frontend/src/routes/dashboard/: +error.svelte  +page.server.ts  +page.svelte  +page.ts  DashboardSkeleton.svelte
frontend/src/routes/imports/: +page.server.ts  +page.svelte
frontend/static/: install.ps1  install.sh  manifest.webmanifest
rustytime/: .env  .env.example  Cargo.toml  build.rs  clippy.toml  deny.toml  diesel-guard.toml
rustytime/examples/: test_db.rs
rustytime/migrations/2025-07-15-233520_setup/: down.sql  up.sql
rustytime/migrations/2025-07-18-233036_remove_email/: down.sql  up.sql
rustytime/migrations/2025-07-18-235739_add_sessions/: down.sql  up.sql
rustytime/migrations/2025-07-19-000941_add_gh_id/: down.sql  up.sql
rustytime/migrations/2025-07-19-152734_add_user_agent/: down.sql  up.sql
rustytime/migrations/2025-07-19-153342_change_github_id_to_int/: down.sql  up.sql
rustytime/migrations/2025-10-06-113812_add_projects_table/: down.sql  up.sql
rustytime/migrations/2025-10-08-000000_add_impersonation/: down.sql  up.sql
rustytime/migrations/2025-10-10-204244_add_hb_id_to_bigserial/: down.sql  up.sql
rustytime/migrations/2025-10-12-183024_add_admin_levels/: down.sql  up.sql
rustytime/migrations/2025-10-28-194637_add_leaderboard_table/: down.sql  up.sql
rustytime/migrations/2025-10-29-193037_add_projects_indexes/: down.sql  up.sql
rustytime/migrations/2025-11-02-151343_add_heartbeat_projectid_index/: down.sql  up.sql
rustytime/migrations/2025-11-02-153549_add_project_aliases/: down.sql  up.sql
rustytime/migrations/2025-11-14-000000_add_duration_calculation_views/: down.sql  up.sql
rustytime/migrations/2025-11-17-183758_change_source_type_to_smallint/: down.sql  up.sql
rustytime/migrations/2025-12-02-195255_add_project_list_function/: down.sql  up.sql
rustytime/migrations/2025-12-02-202911_add_dashboard_stats_function/: down.sql  up.sql
rustytime/migrations/2026-01-13-215324_add_better_indexes/: down.sql  up.sql
rustytime/migrations/2026-01-13-223422_add_continuous_aggregates/: down.sql  up.sql
rustytime/migrations/2026-01-16-191722_optimize_dashboard_query/: down.sql  up.sql
rustytime/migrations/2026-01-18-000000_add_import_jobs/: up.sql
rustytime/migrations/2026-01-21-141745_add_user_timezone/: down.sql  up.sql
rustytime/migrations/2026-01-25-003349_drop_session_clean_job/: down.sql  up.sql
rustytime/migrations/2026-01-25-130155_add_missing_functions/: down.sql  up.sql
rustytime/migrations/2026-01-25-133546_add_project_alias_resolutions/: down.sql  up.sql
rustytime/migrations/2026-01-25-133608_update_functions_for_alias_resolutions/: down.sql  up.sql
rustytime/migrations/2026-01-25-185800_add_hidden_to_projects/: down.sql  up.sql
rustytime/migrations/2026-01-25-185830_add_project_url_column/: down.sql  up.sql
rustytime/migrations/2026-02-10-201818_top_projects_by_range/: down.sql  up.sql
rustytime/migrations/2026-02-22-133203_optimize_database/: down.sql  up.sql
rustytime/src/: docs.rs  lib.rs  main.rs  routes.rs  schema.rs  state.rs
rustytime/src/db/: connection.rs  instrumentation.rs  leaderboard.rs  migrations.rs  mod.rs  seed.rs
rustytime/src/handlers/: admin.rs  dashboard.rs  github.rs  homepage.rs  info.rs  leaderboard.rs  mod.rs  project.rs  projects.rs  user.rs
rustytime/src/handlers/admin/: mod.rs
rustytime/src/handlers/api/: user.rs
rustytime/src/handlers/data/: import.rs  mod.rs  project_aliases.rs  projects.rs
rustytime/src/handlers/page/: admin.rs  dashboard.rs  imports.rs  leaderboard.rs  mod.rs  profile.rs  projects.rs  settings.rs
rustytime/src/jobs/: import.rs  leaderboard.rs  mod.rs  sessions.rs
rustytime/src/models/: heartbeat.rs  import_job.rs  leaderboard.rs  mod.rs  project.rs  project_alias.rs  session.rs  user.rs
rustytime/src/models/heartbeat/: mod.rs  tests.rs
rustytime/src/routes/: admin.rs  api.rs  data.rs  github.rs  mod.rs  project.rs  user.rs
rustytime/src/utils/: auth.rs  cache.rs  env.rs  extractors.rs  http.rs  instrumented.rs  logging.rs  macros.rs  metrics.rs  middleware.rs  mod.rs  session.rs  templates.rs  time.rs  tracing.rs  transaction.rs
rustytime/src/utils/auth/: mod.rs  tests.rs
rustytime/src/utils/http/: mod.rs  tests.rs
rustytime/src/utils/metrics/: mod.rs  tests.rs
rustytime/src/utils/session/: mod.rs  tests.rs
rustytime/src/utils/time/: mod.rs  tests.rs
rustytime/templates/: admin_dashboard.html  dashboard.html  home.html
rustytime/tests/: integration_tests.rs
rustytime/tests/common/: mod.rs
(+44 files in other folders)
