[package]
name = "rustytime"
version = "0.2.0"
edition = "2024"

[profile.release-lto]
inherits = "release"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
overflow-checks = false
debug = false

[dependencies]
axum =  { version = "0.8.4", features = ["macros"] }
diesel = { version = "2.2.12", features = ["chrono", "postgres", "uuid", "r2d2", "serde_json", "network-address"] }
tokio = { version = "1.46.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace", "request-id"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
chrono = { version = "0.4.41", features = ["serde"] }
serde_json = "1.0.141"
base64 = "0.22.1"
ipnetwork = { version = "0.21.1", features = ["serde"] }
oauth2 = "5.0.0"
reqwest = { version = "0.12.22", features = ["json", "cookies", "rustls-tls"] }
url = "2.5.4"
tower = "0.5.2"
tower-cookies = "0.11.0"
time = "0.3.41"
minijinja = { version = "2.11.0", features = ["loader"] }
minijinja-autoreload = "2.11.0"
urlencoding = "2.1.3"
regex = "1.11.1"
once_cell = "1.21.3"
woothee = "0.13.0"
