[package]
name = "rustytime-server"
description = "🕒 blazingly fast time tracking for developers"
version = "0.11.2"
edition = "2024"
authors = ["ImShyMike"]
readme = "../README.md"
license = "AGPL-3.0-only"
homepage = "https://rustytime.shymike.dev"
repository = "https://github.com/ImShyMike/rustytime"

[[bin]]
name = "rustytime"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
overflow-checks = false
debug = false

[profile.good]
inherits = "release"
opt-level = 3
lto = "thin"
codegen-units = 4
panic = "abort"
strip = "symbols"
overflow-checks = false
debug = false

[features]
default = []
seed = ["rand"]

[dependencies]
axum =  { version = "0.8.6", features = ["json", "query", "http1", "http2", "tokio", "macros"], default-features = false }
diesel = { version = "2.3.4", features = ["32-column-tables", "chrono", "postgres", "uuid", "r2d2", "network-address"], default-features = false }
diesel_migrations = { version = "2.3.1", default-features = false }
tokio = { version = "1.48.0", features = ["signal", "rt-multi-thread"], default-features = false }
tower-http = { version = "0.6.7", features = ["limit", "timeout", "trace", "cors", "normalize-path", "compression-gzip", "decompression-gzip"], default-features = false }
tracing = { version = "0.1.43", default-features = false }
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"], default-features = false }
dotenvy = { version = "0.15.7", default-features = false }
serde = { version = "1.0.228", features = ["derive"], default-features = false }
uuid = { version = "1.18.1", features = ["serde", "v4"], default-features = false }
chrono = { version = "0.4.42", default-features = false }
serde_json = { version = "1.0.145", default-features = false }
base64 = { version = "0.22.1", default-features = false }
ipnetwork = { version = "0.21.1", features = ["serde"], default-features = false }
oauth2 = { version = "5.0.0",  features = ["reqwest"], default-features = false }
reqwest = { version = "0.12.24", features = ["json", "cookies", "rustls-tls"], default-features = false }
url = { version = "2.5.7", default-features = false }
tower = { version = "0.5.2", default-features = false }
tower-cookies = { version = "0.11.0", features = ["axum-core"], default-features = false }
time = { version = "0.3.44", default-features = false }
urlencoding = { version = "2.1.3", default-features = false }
regex = { version = "1.12.2", default-features = false }
once_cell = { version = "1.21.3", default-features = false }
woothee = { version = "0.13.0", default-features = false }
rand = { version = "0.9.2", features = ["std", "thread_rng"], default-features = false, optional = true }
axum-prometheus = { version = "0.9.0", features = ["prometheus"], default-features = false }
tower_governor = { version = "0.8.0", features = ["axum", "tracing"], default-features = false }
aide = { version = "0.15.1", features = ["axum", "axum-json", "axum-query", "axum-tokio", "scalar"] }
schemars = { version = "1.1.0", features = ["chrono04", "derive"] }
axum-tracing-opentelemetry = { version = "0.32.2", features = ["tracing_level_info"], default-features = false }
init-tracing-opentelemetry = { version = "0.34.0", features = ["metrics", "opentelemetry-otlp", "tracing_subscriber_ext"], default-features = false }
opentelemetry = { version = "0.31.0", default-features = false, features = ["logs", "metrics", "trace"] }
opentelemetry-otlp = { version = "0.31.0", default-features = false, features = ["logs", "http-proto", "reqwest-blocking-client", "reqwest-rustls"] }
opentelemetry_sdk = { version = "0.31.0", default-features = false, features = ["logs"] }
indexmap = { version = "2.12.1", default-features = false }
pyroscope = { version = "0.5.8", default-features = false }
pyroscope_pprofrs = { version = "0.2.10", default-features = false }
opentelemetry-appender-tracing = { version = "0.31.1", default-features = false }
