[package]
name = "rustytime-server"
description = "🕒 blazingly fast time tracking for developers"
version = "0.20.1"
edition = "2024"
authors = ["ImShyMike"]
readme = "../README.md"
license = "AGPL-3.0-only"
homepage = "https://rustytime.shymike.dev"
repository = "https://github.com/ImShyMike/rustytime"

[lib]
name = "rustytime_server"
path = "src/lib.rs"

[[bin]]
name = "rustytime"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
overflow-checks = false
debug = false

[profile.good]
inherits = "release"
opt-level = 3
lto = "thin"
codegen-units = 8
panic = "abort"
strip = "symbols"
overflow-checks = false
debug = false

[features]
default = []
seed = ["rand"]
integration = []

[dependencies]
axum =  { version = "0.8.8", features = ["json", "query", "http1", "http2", "tokio", "macros"], default-features = false }
diesel = { version = "2.3.6", features = ["32-column-tables", "chrono", "postgres", "uuid", "r2d2", "network-address"], default-features = false }
diesel_migrations = { version = "2.3.1", default-features = false }
tokio = { version = "1.49.0", features = ["signal", "rt-multi-thread"], default-features = false }
tower-http = { version = "0.6.7", features = ["limit", "timeout", "trace", "cors", "normalize-path", "compression-gzip", "decompression-gzip"], default-features = false }
tracing = { version = "0.1.44", default-features = false }
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"], default-features = false }
dotenvy = { version = "0.15.7", default-features = false }
serde = { version = "1.0.228", features = ["derive"], default-features = false }
uuid = { version = "1.20.0", features = ["serde", "v4"], default-features = false }
chrono = { version = "0.4.43", default-features = false }
chrono-tz = { version = "0.10.4", default-features = false }
serde_json = { version = "1.0.149", default-features = false }
base64 = { version = "0.22.1", default-features = false }
ipnetwork = { version = "0.21.1", features = ["serde"], default-features = false }
oauth2 = { version = "5.0.0",  features = ["reqwest"], default-features = false }
reqwest = { version = "0.13.2", features = ["json", "cookies", "query", "rustls"], default-features = false }
url = { version = "2.5.8", default-features = false }
tower = { version = "0.5.3", default-features = false }
tower-cookies = { version = "0.11.0", features = ["axum-core"], default-features = false }
time = { version = "0.3.47", default-features = false }
urlencoding = { version = "2.1.3", default-features = false }
regex = { version = "1.12.3", default-features = false }
once_cell = { version = "1.21.3", default-features = false }
woothee = { version = "0.13.0", default-features = false }
rand = { version = "0.10.0", features = ["std", "thread_rng"], default-features = false, optional = true }
axum-prometheus = { version = "0.10.0", features = ["prometheus"], default-features = false }
tower_governor = { version = "0.8.0", features = ["axum", "tracing"], default-features = false }
aide = { version = "0.16.0-alpha.2", features = ["axum", "axum-json", "axum-query", "axum-tokio", "scalar"] }
schemars = { version = "1.2.1", features = ["chrono04", "derive"] }
axum-tracing-opentelemetry = { version = "0.33.0", features = ["tracing_level_info"], default-features = false }
init-tracing-opentelemetry = { version = "0.36.0", features = ["metrics", "opentelemetry-otlp", "tracing_subscriber_ext"], default-features = false }
opentelemetry = { version = "0.31.0", default-features = false, features = ["logs", "metrics", "trace"] }
opentelemetry-otlp = { version = "0.31.0", default-features = false, features = ["logs", "http-proto", "reqwest-blocking-client", "reqwest-rustls"] }
opentelemetry_sdk = { version = "0.31.0", default-features = false, features = ["logs"] }
indexmap = { version = "2.13.0", default-features = false }
pyroscope = { version = "0.5.8", default-features = false }
pyroscope_pprofrs = { version = "0.2.10", default-features = false }
opentelemetry-appender-tracing = { version = "0.31.1", default-features = false }
apalis-postgres = { version = "1.0.0-rc.2", features = ["async-std", "time"] }
apalis = { version = "1.0.0-rc.3", features = ["tracing", "catch-panic", "prometheus"] }
apalis-cron = { version = "1.0.0-rc.2", features = ["cron"], default-features = false }
cron = { version = "0.15.0", default-features = false }
futures = { version = "0.3.31", default-features = false }
sqlx = { version = "0.8.6", default-features = false }
moka = { version = "0.12.13", features = ["sync"], default-features = false }
sentry = { version = "0.46.1", default-features = false, features = ["rustls", "tower", "tracing", "backtrace", "contexts", "panic", "transport"] }

[dev-dependencies]
serde_urlencoded = { version = "0.7.1" }
serde_qs = { version = "1.0.0" }
axum-test = { version = "18.7.0" }
tower = { version = "0.5.3", features = ["util"] }
